--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/CustomerService/CustomerThread/index.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/CustomerService/CustomerThread/index.html.twig
@@ -36,7 +36,7 @@
     )) }}
   {% endblock %}
 
-  {% include '@PrestaShop/Admin/Sell/CustomerService/CustomerThread/Block/list_header_html.twig' %}
+  {% include '@PrestaShop/Admin/Sell/CustomerService/CustomerThread/Block/list_header.html.twig' %}
   {% include '@PrestaShop/Admin/Common/Grid/grid_panel.html.twig' with {'grid': customerThreadGrid} %}
 
   {% include '@PrestaShop/Admin/Sell/CustomerService/CustomerThread/Block/contact_option.html.twig' %}
