--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/form_modal.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/form_modal.html.twig
@@ -1,4 +1,4 @@
-{#**
+{# **
  * Copyright since 2007 PrestaShop SA and Contributors
  * PrestaShop is an International Registered Trademark & Property of PrestaShop SA
  *
@@ -21,27 +21,13 @@
  * @author    PrestaShop SA and Contributors <contact@prestashop.com>
  * @copyright Since 2007 PrestaShop SA and Contributors
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
- *#}
-{% extends '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig' %}
-
-{% block specific_prices_widget %}
-  <div id="specific-prices-container">
-    {{ form_widget(form) }}
-    {{ block('specific_prices_list') }}
-  </div>
-{% endblock %}
-
-{% block specific_prices_list %}
-  {% include '@PrestaShop/Admin/Sell/Catalog/Product/SpecificPrice/Blocks/list.html.twig' %}
-{% endblock %}
-
-{% block catalog_price_rules_widget %}
-  <div id="catalog-price-rules-container">
-    {{ form_widget(form) }}
-    {{ block('catalog_price_rules_list') }}
-  </div>
-{% endblock %}
-
-{% block catalog_price_rules_list %}
-  {% include '@PrestaShop/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/list.html.twig' %}
-{% endblock %}
+ * #}
+<div id="specific-price-form-modal"
+     class="d-none"
+     data-translations="{{ {
+       'modal.save': 'Save'|trans({}, 'Admin.Actions'),
+       'modal.apply': 'Apply'|trans({}, 'Admin.Actions'),
+       'modal.close': 'Close'|trans({}, 'Admin.Actions'),
+       'modal.cancel': 'Cancel'|trans({}, 'Admin.Actions'),
+     }|json_encode }}"
+></div>
