--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/SpecificPrice/FormTheme/catalog_price_rule.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/SpecificPrice/FormTheme/catalog_price_rule.html.twig
@@ -1,4 +1,4 @@
-{#**
+{# **
  * Copyright since 2007 PrestaShop SA and Contributors
  * PrestaShop is an International Registered Trademark & Property of PrestaShop SA
  *
@@ -21,27 +21,28 @@
  * @author    PrestaShop SA and Contributors <contact@prestashop.com>
  * @copyright Since 2007 PrestaShop SA and Contributors
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
- *#}
-{% extends '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig' %}
+ * #}
 
-{% block specific_prices_widget %}
-  <div id="specific-prices-container">
-    {{ form_widget(form) }}
-    {{ block('specific_prices_list') }}
-  </div>
-{% endblock %}
-
-{% block specific_prices_list %}
-  {% include '@PrestaShop/Admin/Sell/Catalog/Product/SpecificPrice/Blocks/list.html.twig' %}
-{% endblock %}
+{% extends '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
 
 {% block catalog_price_rules_widget %}
-  <div id="catalog-price-rules-container">
-    {{ form_widget(form) }}
-    {{ block('catalog_price_rules_list') }}
+  <div class="card">
+    <h3 class="card-header">
+      <i class="material-icons">attach_money</i>
+      {{ 'Catalog Prices'|trans({}, 'Admin.Catalog.Feature') }}
+    </h3>
+    <div class="card-body">
+      {{ block('form_widget') }}
+    </div>
   </div>
-{% endblock %}
+{% endblock catalog_price_rule_widget %}
 
-{% block catalog_price_rules_list %}
-  {% include '@PrestaShop/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/list.html.twig' %}
+{% block searched_customer_row %}
+  <li class="media entity-item" id="{{ form.vars.name }}">
+    <div class="media-body media-middle">
+      {{ form_widget(form.fullname_and_email) }}
+      <i class="material-icons delete entity-item-delete">clear</i>
+    </div>
+    {{ form_widget(form.id_customer) }}
+  </li>
 {% endblock %}
