Fixing last things
# Conflicts:
#	admin-dev/themes/new-theme/js/fos_js_routes.json
#	src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig

# Conflicts:
#	admin-dev/themes/new-theme/js/fos_js_routes.json

# Conflicts:
#	admin-dev/themes/new-theme/js/fos_js_routes.json

# Conflicts:
#	admin-dev/themes/new-theme/js/fos_js_routes.json

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/list.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/list.html.twig
@@ -36,7 +36,7 @@
       <th>{{ 'From Quantity'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'From'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'To'|trans({}, 'Admin.Global') }}</th>
-      <td></td>
+      <th></th>
     </tr>
     </thead>
     <tbody>
@@ -56,11 +56,12 @@
       <td class="from"></td>
       <td class="to"></td>
       <td>
-        <button
+        <a
+          href=""
           type="button"
           title="{{ 'Edit'|trans({}, 'Admin.Actions') }}"
           class="js-edit-catalog-price-rule-btn btn tooltip-link"><i class="material-icons">edit</i>
-        </button>
+        </a>
       </td>
     </tr>
   </script>
