--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/paginated_list.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/paginated_list.html.twig
@@ -28,6 +28,8 @@
 
     {{ include('@PrestaShop/Admin/Sell/Catalog/Product/Combination/paginated_list_header.html.twig', {
       'productId': productId,
+      'isMultistoreActive': isMultistoreActive,
+      'contextShopName': contextShopName,
     }) }}
 
     <div class="justify-content-center" id="combinations-list">
