--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Categories/FormTheme/category.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Categories/FormTheme/category.html.twig
@@ -1,29 +1,51 @@
 {% extends '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
 
-{% block category_cover_image_widget %}
-  {% include '@PrestaShop/Admin/Sell/Catalog/Categories/Blocks/cover_image.html.twig' %}
-  {{ block('file_widget') }}
-{% endblock category_cover_image_widget %}
-
-{% block category_thumbnail_widget %}
-  {% include '@PrestaShop/Admin/Sell/Catalog/Categories/Blocks/thumbnail_image.html.twig' %}
-  {{ block('file_widget') }}
-{% endblock category_thumbnail_widget %}
-
-{% block category_menu_thumbnails_widget %}
-  {% include '@PrestaShop/Admin/Sell/Catalog/Categories/Blocks/menu_thumbnail_images.html.twig' %}
-  {% if attr.disabled|default(false) %}
+{% block category_image_widget %}
+  {% if preview_images is defined and preview_images is not empty %}
+    <div>
+      {% for preview_image in preview_images %}
+        {% if can_be_deleted %}
+          <figure class="figure">
+            <img src="{{ preview_image.image_path }}" class="figure-img img-fluid img-thumbnail">
+            <figcaption class="figure-caption">
+              {% if show_size %}
+                <p>{{ 'File size'|trans({}, 'Admin.Advparameters.Feature') }} {{ preview_image.size }}</p>
+              {% endif %}
+              <button class="btn btn-outline-danger btn-sm js-form-submit-btn"
+                      data-form-submit-url="{{ preview_image.delete_path }}"
+                      data-form-csrf-token="{{ csrf_token(csrf_delete_token) }}"
+              >
+                <i class="material-icons">
+                  delete_forever
+                </i>
+                {{ 'Delete'|trans({}, 'Admin.Actions') }}
+              </button>
+            </figcaption>
+          </figure>
+        {% else %}
+          {% for preview_image in preview_images %}
+            <figure class="figure">
+              <img src="{{ preview_image.path }}" class="figure-img img-fluid img-thumbnail">
+              {% if show_size %}
+                <figcaption class="figure-caption">{{ 'File size'|trans({}, 'Admin.Advparameters.Feature') }} {{ preview_image.size }}</figcaption>
+              {% endif %}
+            </figure>
+          {% endfor %}
+        {% endif %}
+      {% endfor %}
+    </div>
+  {% endif %}
+  {% if disabled|default(false) %}
     <div class="d-none">
       {{ block('file_widget') }}
     </div>
 
     <div class="alert alert-warning" role="alert">
       <p class="alert-text">
-        {{ 'You have reached the limit (%s) of files to upload, please remove files to continue uploading'|trans({'%s': maxMenuThumbnails}, 'Admin.Catalog.Notification') }}
+        {{ warning_message }}
       </p>
     </div>
   {% else %}
     {{ block('file_widget') }}
   {% endif %}
-{% endblock category_menu_thumbnails_widget %}
-
+{% endblock category_image_widget %}
