--- a/admin-dev/themes/new-theme/scss/rtl.scss
+++ b/admin-dev/themes/new-theme/scss/rtl.scss
@@ -1,4 +1,4 @@
-/* stylelint-disable, declaration-no-important */
+/* stylelint-disable declaration-no-important */
 
 @font-face {
   font-family: Vazirmatn;
