adjust modal message

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/paginated_list_header.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/paginated_list_header.html.twig
@@ -47,14 +47,16 @@
       </button>
       {% if isMultistoreActive %}
         {% set deleteLabel = 'Delete %combinations_number% combinations for shop "%shop%"'|trans({'%shop%': contextShopName}, 'Admin.Catalog.Feature') %}
+        {% set modalMessage = 'Are you sure you want to delete selected combinations for shop "%shop%"?'|trans({'%shop%': contextShopName}, 'Admin.Catalog.Notification') %}
       {% else %}
         {% set deleteLabel = 'Delete %combinations_number% combinations'|trans({}, 'Admin.Catalog.Feature') %}
+        {% set modalMessage = 'Are you sure you want to delete selected combinations?'|trans({}, 'Admin.Catalog.Notification') %}
       {% endif %}
       <button
         id="combination-bulk-delete-btn" class="dropdown-item bulk-action-btn bulk-delete-btn" type="button"
         data-btn-label="{{ deleteLabel }}"
         data-form-url="{{ url('admin_products_combinations_bulk_delete', { 'productId': productId }) }}"
-        data-modal-message="{{ 'Are you sure you want to delete selected combinations?'|trans({}, 'Admin.Catalog.Notification') }}"
+        data-modal-message="{{ modalMessage }}"
         data-modal-confirm-label="{{ 'Delete %combinations_number% combinations'|trans({}, 'Admin.Catalog.Feature') }}"
         data-modal-cancel-label="{{ 'Cancel'|trans({}, 'Admin.Actions') }}"
         data-bulk-chunk-size="10"
@@ -75,7 +77,7 @@
           id="combination-bulk-delete-btn-all-shops" class="dropdown-item bulk-action-btn bulk-delete-btn" type="button"
           data-btn-label="{{ 'Delete %combinations_number% combinations for all shops'|trans({}, 'Admin.Catalog.Feature') }}"
           data-form-url="{{ url('admin_products_combinations_bulk_delete', { 'productId': productId }) }}"
-          data-modal-message="{{ 'Are you sure you want to delete selected combinations?'|trans({}, 'Admin.Catalog.Notification') }}"
+          data-modal-message="{{ 'Are you sure you want to delete selected combinations for all shops?'|trans({}, 'Admin.Catalog.Notification') }}"
           data-modal-confirm-label="{{ 'Delete %combinations_number% combinations'|trans({}, 'Admin.Catalog.Feature') }}"
           data-modal-cancel-label="{{ 'Cancel'|trans({}, 'Admin.Actions') }}"
           data-bulk-chunk-size="10"
