fixed behat tests

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/CustomerService/CustomerThread/Block/list_header_html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/CustomerService/CustomerThread/Block/list_header_html.twig
@@ -24,7 +24,7 @@
  * #}
 
 <div class="">
-  <div id="CustomerThreadContacts" class="d-flex justify-content-around row">
+  <div id="customer_thread_contacts" class="d-flex justify-content-around row">
     {% set nb_categories = servicesSummary|length %}
     {% for serviceSummary in servicesSummary %}
 
