Add button in multishop mode to manage shop images

--- a/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
+++ b/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
@@ -729,6 +729,10 @@ $product-page-padding-bottom: 80px !default;
     }
   }
 
+  .manage-shop-images-button-container {
+    text-align: right;
+  }
+
   .nav-tabs {
     .nav-item.has-error {
       .nav-link {
