--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/product.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/product.html.twig
@@ -36,6 +36,9 @@
     'data-token': csrf_token(update_form_name)
   }) %}
 
+  {% if form.shop_images is defined %}
+    {{ form_row(form.shop_images) }}
+  {% endif %}
   <div {{ block('widget_attributes') }}>
   </div>
 {% endblock %}
