--- a/src/PrestaShopBundle/Resources/views/Admin/Configure/AdvancedParameters/system_information.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Configure/AdvancedParameters/system_information.html.twig
@@ -33,7 +33,7 @@
         <i class="material-icons">info_outline</i> {{ 'Configuration information'|trans }}
       </h3>
       <div class="card-body">
-        <p class="mb-0">{{ 'This information must be provided when you report an issue on GitHub or on the forum.'|trans }}</p>
+        <p class="mb-0">{{ 'You must provide this information when reporting an issue on GitHub or on the forum.'|trans }}</p>
       </div>
     </div>
 
