--- a/admin-dev/themes/new-theme/scss/config/_settings.scss
+++ b/admin-dev/themes/new-theme/scss/config/_settings.scss
@@ -20,6 +20,7 @@ $bright-status-text: #383838;
 $local-font: true;
 $info-block-background: #f3f3f3;
 $widget-border-color: #e7e7e7;
+$alert-warning-bg: #fffbd3;
 
 // Multishop
 $multishop-header-default-color: #383c43;
