missing class templates

--- a/src/PrestaShopBundle/Resources/views/Admin/Common/Grid/Columns/Content/link.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Common/Grid/Columns/Content/link.html.twig
@@ -39,6 +39,8 @@
   {% endif %}
 {% endif %}
 
+{% set class = (class ~ ' ' ~ column.options.attr.class|default(''))|trim %}
+
 {% block link %}
 <a
   class="{{ class }} text-nowrap"
