Handle toggle action of multi shop previews

--- a/admin-dev/themes/new-theme/scss/config/_settings.scss
+++ b/admin-dev/themes/new-theme/scss/config/_settings.scss
@@ -22,6 +22,9 @@ $info-block-background: #f3f3f3;
 $widget-border-color: #e7e7e7;
 $alert-warning-bg: #fffbd3;
 
+$light-blue: #e9f8fb;
+$light-gray: #fafbfc;
+
 // Multishop
 $multishop-header-default-color: #383c43;
 $multishop-header-default-background: #ebebeb;
