Add style on api accesses states column

--- a/src/PrestaShopBundle/Resources/views/Admin/Common/Grid/Columns/Content/api_accesses_states.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Common/Grid/Columns/Content/api_accesses_states.html.twig
@@ -23,4 +23,4 @@
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
  *#}
 
-<i class="material-icons">check</i>{{ 'Active'|trans({}, 'Admin.Global') }}: {{ record.active_api_access }} <i class="material-icons">close</i>{{ 'Inactive'|trans({}, 'Admin.Global') }}: {{ record.inactive_api_access }}
+<i class="material-icons active">check</i>{{ 'Active'|trans({}, 'Admin.Global') }}: {{ record.active_api_access }} <i class="material-icons inactive">close</i>{{ 'Inactive'|trans({}, 'Admin.Global') }}: {{ record.inactive_api_access }}
