translate some labels

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/carriers.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/carriers.html.twig
@@ -29,8 +29,8 @@
     <div id="carrier_selector"
          {# @todo: fix #}
          data-translations="{{ {
-           'filters.label': 'Filter by:'|trans({}, 'Admin.Actions'),
-           'filters.clear': 'Clear filter|Clear %filtersNb% filters'|trans({}, 'Admin.Actions'),
+           'allCarriers.label': 'All carriers'|trans({}, 'Admin.Actions'),
+           'selectedCarriers.label': 'Only selected carriers'|trans({}, 'Admin.Actions'),
          }|json_encode }}"
     ></div>
 {#  </div>#}
