use shopId in route url for deletion to determine shop or all shops

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/paginated_list.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/paginated_list.html.twig
@@ -30,6 +30,7 @@
       'productId': productId,
       'isMultistoreActive': isMultistoreActive,
       'contextShopName': contextShopName,
+      'contextShopId': contextShopId,
     }) }}
 
     <div class="justify-content-center" id="combinations-list">
