--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/paginated_list_header.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/paginated_list_header.html.twig
@@ -69,6 +69,7 @@
         data-download-error-log="{{ 'Download error log'|trans({}, 'Admin.Catalog.Feature') }}"
         data-view-error-log="{{ 'View %error_count% error logs'|trans({}, 'Admin.Catalog.Feature') }}"
         data-view-error-title="{{ 'Error log'|trans({}, 'Admin.Catalog.Feature') }}"
+        data-context-shop-id="{{ contextShopId }}"
       >
         {{ deleteLabel }}
       </button>
